5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1716_2497.log
== TEST (2019-05-14 16:53:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:54:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(rend, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:56:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(qi, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 > tempo > 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(qi, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(qi, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:00:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= tempo >= 1 ):
	rend = t * juros
	saldo = saldo * rend
	t = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:09:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:09:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 5 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(saldo)

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:11:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 4 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(saldo)

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:11:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 4 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	

   print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
File "XXXX", line 20
    print(round(saldo, 2)) # Exibicao de resultados
                                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:11:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 4 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))

print(round(saldo, 2)) # Exibicao de resultados

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 4 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:12:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 4 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- EXECUTION TIME:
0.144368
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( 4 >= t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t > tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t > tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:17:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- EXECUTION TIME:
0.15974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:18:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:18:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print (round(saldo,2))



	


-- EXECUTION TIME:
0.140225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:18:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print (round(saldo,2))



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:18:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print (round(saldo,2))



	


-- EXECUTION TIME:
0.12829
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:18:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

   print (round(saldo,2))



	


-- ERROR:
File "XXXX", line 19
    print (round(saldo,2))
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:19:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))

   



	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:54:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))

   



	


-- EXECUTION TIME:
0.150269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
